# vmiids

./: .gitignore  .project  AUTHORS  Makefile.am  NEWS  README  aclocal.m4  autogen.sh  configure.ac  doxygen.cfg
debian/: README  README.Debian  changelog  control  copyright  rules  vmiids-dev.install  vmiids-modules.install  vmiids.install
src/: ConsoleMonitor.cpp  ConsoleMonitor.h  Makefile.am  MonitorParser.cpp  MonitorParser.h  QemuMonitor.cpp  QemuMonitor.h  QemuMonitorParser.cpp  QemuMonitorParser.h  ShellParser.cpp  libvmi.cpp  libvmi.h
src/clientApps/: Makefile.am  VmiIDSrpc.cpp  VmiIDSrpc.h  vmiids_rpc_clnt.c  vmimodule.cpp  vmistop.cpp
src/gui/: DetectionModuleWidget.cpp  DetectionModuleWidget.h  MainWindow.cpp  MainWindow.h  Makefile.am  QtGui.cpp
src/include/: ConsoleMonitor.h  DetectionModule.h  Module.h  NotificationModule.h  SensorModule.h  VmiIDS.h  libvmi.h  vmiids_rpc.h
src/libvmi/: ConsoleMonitor.cpp  ConsoleMonitor.h  Debug.h  Makefile.am  QemuMonitor.cpp  QemuMonitor.h  QemuMonitorParser.cpp  Shell.cpp  Shell.h  ShellParser.cpp  ShellParser.h  libvmi.cpp  libvmiMain.cpp
src/vmiids/: ConsoleMonitor.cpp  ConsoleMonitor.h  DetectionModule.cpp  DetectionModule.h  DetectionThread.cpp  DetectionThread.h  DynamicDetectionModule.cpp  DynamicDetectionModule.h  Makefile.am  Modintern.h  Module.h  NotificationModule.cpp  NotificationModule.h  OutputModule.h  RpcNotificationModule.cpp  RpcNotificationModule.h  SensorModule.cpp  SensorModule.h  SimpleDetectionModule.cpp  SimpleDetectionModule.h  VmiIDS.cpp  VmiIDS.h  clearfscache.cpp  main.cpp  vmiids.cfg  vmiids.sh.in  vmiids_rpc.h  vmiids_rpc.x  vmiids_rpc_svc.c
src/vmiids/detection/: ExampleDetectionModule.cpp  ExampleDetectionModule.h  FileContentDetectionModule.cpp  FileContentDetectionModule.h  FileListDetectionModule.cpp  FileListDetectionModule.h  Makefile.am  ProcessListDetectionModule.cpp  ProcessListDetectionModule.h  RkHunterDetectionModule.cpp  RkHunterDetectionModule.h  StateChangerDetectionModule.cpp  StateChangerDetectionModule.h
src/vmiids/detection/rkhunterfiles/: extractVariables.cpp  rkhunter
src/vmiids/modules/: Makefile.am
src/vmiids/modules/detection/: ExampleDetectionModule.h  FileContentDetectionModule.cpp  FileContentDetectionModule.h  FileListDetectionModule.cpp  FileListDetectionModule.h  Makefile.am  ProcessListDetectionModule.cpp  ProcessListDetectionModule.h  RkHunterDetectionModule.cpp  RkHunterDetectionModule.h  StateChangerDetectionModule.h
src/vmiids/modules/notification/: BufferNotificationModule.cpp  BufferNotificationModule.h  FileNotificationModule.cpp  FileNotificationModule.h  Makefile.am  ShellNotificationModule.cpp  ShellNotificationModule.h
src/vmiids/modules/sensor/: FileSystemSensorModule.cpp  FileSystemSensorModule.h  Makefile.am  MemorySensorModule.cpp  MemorySensorModule.h  QemuMonitorSensorModule.cpp  QemuMonitorSensorModule.h  ShellSensorModule.cpp  ShellSensorModule.h
src/vmiids/modules_extern/: Makefile.am
src/vmiids/modules_extern/detection/: ExampleDetectionModule.cpp  ExampleDetectionModule.h  FileContentDetectionModule.cpp  FileContentDetectionModule.h  FileListDetectionModule.cpp  FileListDetectionModule.h  ProcessListDetectionModule.cpp  ProcessListDetectionModule.h  RkHunterDetectionModule.cpp  RkHunterDetectionModule.h  StateChangerDetectionModule.cpp  StateChangerDetectionModule.h
src/vmiids/modules_extern/notification/: Makefile.am  ShellNotificationModule.h
src/vmiids/modules_extern/sensor/: Makefile.am  QemuMonitorSensorModule.h  ShellSensorModule.cpp
src/vmiids/notification/: FileNotificationModule.h  Makefile.am  ShellNotificationModule.cpp  ShellNotificationModule.h
src/vmiids/rpc/: Makefile.am  RpcClient.cpp  RpcClient.h  RpcCommon.cpp  RpcCommon.h  RpcServer.cpp  RpcServer.h
src/vmiids/sensor/: FileSystemSensorModule.cpp  FileSystemSensorModule.h  Makefile.am  MemorySensorModule.cpp  MemorySensorModule.h  QemuMonitorSensorModule.cpp  QemuMonitorSensorModule.h  ShellSensorModule.cpp  ShellSensorModule.h
src/vmiids/util/: Exception.h  Makefile.am  Mutex.h  MutexLocker.h  Settings.cpp  Settings.h  Thread.cpp  Thread.h
src/vmiidsmodules/: Makefile.am
src/vmiidsmodules/detection/: ExampleDetectionModule.cpp  ExampleDetectionModule.h  FileContentDetectionModule.cpp  FileContentDetectionModule.h  FileListDetectionModule.cpp  FileListDetectionModule.h  Makefile.am  ProcessListDetectionModule.cpp  ProcessListDetectionModule.h  RkHunterDetectionModule.cpp  RkHunterDetectionModule.h  StateChangerDetectionModule.cpp  StateChangerDetectionModule.h
src/vmiidsmodules/detection/rkhunterfiles/: extractVariables.pl
src/vmiidsmodules/notification/: Makefile.am  ShellNotificationModule.cpp  ShellNotificationModule.h
src/vmiidsmodules/sensor/: FileSystemSensorModule.cpp  FileSystemSensorModule.h  Makefile.am  MemorySensorModule.cpp  MemorySensorModule.h  QemuMonitorSensorModule.cpp  QemuMonitorSensorModule.h  ShellSensorModule.cpp  ShellSensorModule.h
tests/: Makefile.am  QemuMonitorTest.cpp  QemuMonitorTest.h  libvmiTest.cpp
