
lib_LTLIBRARIES = libshellnotificationmodule.la

libshellnotificationmodule_la_LIBADD = 
libshellnotificationmodule_la_LDFLAGS =
libshellnotificationmodule_la_SOURCES = ShellNotificationModule.h \
					ShellNotificationModule.cpp 
libshellnotificationmodule_la_CFLAGS = -I $(top_builddir)/src/include
libshellnotificationmodule_la_CXXFLAGS = $(CPPUNIT_CFLAGS) -I $(top_builddir)/src/include -rdynamic

