AM_CPPFLAGS = -Wall -Wextra -Werror
AM_CXXFLAGS = -fpic -I $(top_builddir)/src/include -rdynamic
AM_CFLAGS = -fpic  -I $(top_builddir)/src/include


lib_LTLIBRARIES = libshellnotificationmodule.la

libshellnotificationmodule_la_SOURCES = ShellNotificationModule.h \
					ShellNotificationModule.cpp 

