AM_CPPFLAGS = -Wall -Wextra -Werror @AM_CPPFLAGS@
AM_CXXFLAGS = -fpic -I $(top_builddir)/src @AM_CXXFLAGS@ -rdynamic
AM_CFLAGS = -fpic  -I $(top_builddir)/src @AM_CFLAGS@ 


#lib_LTLIBRARIES = libexampledetectionmodule.la 

#libexampledetectionmodule_la_SOURCES = ExampleDetectionModule.h \
#					ExampleDetectionModule.cpp \
#					../sensor/QemuMonitorSensorModule.h \
#					../sensor/FileSystemSensorModule.h \
#					../sensor/ShellSensorModule.h					