AM_CPPFLAGS = -Wall -Wextra -Werror @AM_CPPFLAGS@
AM_CXXFLAGS = -fpic -I $(top_builddir)/src @AM_CXXFLAGS@ -rdynamic
AM_CFLAGS = -fpic  -I $(top_builddir)/src @AM_CFLAGS@ 


#lib_LTLIBRARIES = libshellnotificationmodule.la

#libshellnotificationmodule_ladir = $(includedir)/vmiids/notification
#libshellnotificationmodule_la_HEADERS = ShellNotificationModule.h
#libshellnotificationmodule_la_SOURCES = $(libshellnotificationmodule_la_HEADERS) \
#					ShellNotificationModule.cpp 