AM_CPPFLAGS = -Wall -Wextra -Werror @AM_CPPFLAGS@
AM_CXXFLAGS = -fpic -I $(top_builddir)/src @AM_CXXFLAGS@ -rdynamic
AM_CFLAGS = -fpic  -I $(top_builddir)/src @AM_CFLAGS@ 

#lib_LTLIBRARIES = libmemorysensormodule.la

#libmemorysensormodule_ladir = $(includedir)/vmiids/sensor
#libmemorysensormodule_la_HEADERS = MemorySensorModule.h
#libmemorysensormodule_la_SOURCES = $(libmemorysensormodule_la_HEADERS) \
#                    MemorySensorModule.cpp
#libmemorysensormodule_la_CPPFLAGS = @AM_CPPFLAGS@
#libmemorysensormodule_la_LDFLAGS = @MEMTOOL_LDFLAGS@ @AM_LDFLAGS@ 